--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "react-router-dom": "^6.26.2"
   }
 }
